--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':library')
+//    implementation project(':library')
+    implementation 'com.github.oneAcorn:FoldNavScrollLayout:1.1'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
